# trader-pro

./: .env.example  .gitignore  .pre-commit-config.yaml  API-METHODOLOGY.md  API_SPEC_REFACTO.md  ARCHITECTURE.md  AUTH_IMPLEMENTATION.md  BACKEND-BROKER-METHODOLOGY.md  BACKEND-GENERATION-ASSESSMENT.md  BACKEND-SCRIPTS-REFACTO.md  BACKEND-WEBSOCKET-METHODOLOGY.md  BROADCASTER-IMPLEMENTATION.md  CI-VERIFICATION.md  CLIENT-GENERATION.md  DOCUMENTATION-RESTRUCTURING.md  ENVIRONMENT-CONFIG.md  FASTWS-BARS-VALIDATION.md  HOOKS-SETUP.md  INSTALLATION-IMPROVEMENTS.md  MAKEFILE-GUIDE.md  MODULAR_BACKEND_IMPL.md  MODULAR_FASTAPI_MIGRATION.md  MODULE_SCOPED_WS_APP.md  MULTI_PROCESS_BACKEND_IMPL.md  Makefile  NVM-SOURCING-APPROACH.md  OFFLINE-CLIENT-GENERATION.md  PLAYWRIGHT-MCP-instructions.md  README.md  REFACTORING-MODELS.md  REFACTORING-SUMMARY.md  REFACTORING-WEBSOCKET-MODELS.md  TESTING-INDEPENDENCE.md  WEBSOCKET-IMPLEMENTATION.md  WEBSOCKET-METHODOLOGY.md  WORKSPACE-SETUP.md  google-oauth-web-client.json  openapi-3.0.json  project.mk  pyproject.toml  (+1 more)
backend/: .flake8  .gitignore  .instructions.md  .openapi-checksum  .pre-commit-config.yaml  ASYNCAPI-GENERATOR.md  Makefile  README.md  SYSTEMATIC_WS_ROUTER_GEN.md  WEBSOCKET-README.md  asyncapi-0.json  asyncapi-1.json  asyncapi.json  asyncapi.yaml  baseline-coverage.txt  coverage.xml  dev-config.yaml  mypy.ini  nginx-dev.conf  openapi.json  pyproject.toml  pyrightconfig.json  test-cov-after-fixtures.txt
backend/docs/: BACKEND_MANAGER_GUIDE.md  BACKEND_TESTING.md  BACKEND_WEBSOCKETS.md  BAR-BROADCASTING.md  MODULAR_BACKEND_ARCHITECTURE.md  MODULAR_VERSIONNING.md  PYTHON_CLIENT_GEN.md  SPECS_AND_CLIENT_GEN.md  VERSIONING.md  WEBSOCKETS.md  WS-ROUTER-GENERATION.md  WS_ROUTERS_GEN.md  bar-broadcasting.md  versioning.md  websockets.md  ws-router-generation.md
backend/docs/outdated/: API_SPEC_REFACTO.md  BACKEND-GENERATION-ASSESSMENT.md  BACKEND-SCRIPTS-REFACTO.md  MODULAR_BACKEND_IMPL.md  MODULE_SCOPED_WS_APP.md  README.md  (+3 more)
backend/examples/: FASTWS-INTEGRATION.md  VERSIONING-EXAMPLES.md  VUE-INTEGRATION.md  fastws-integration.md
backend/external_packages/: __init__.py
backend/scripts/: __init__.py  backend_manager.py  check_response_models.py  export_asyncapi_spec.py  export_openapi.py  export_openapi_spec.py  gen_nginx_conf.py  generate-clients.sh  generate-frontend-client.sh  generate-ws-routers.sh  generate_python_clients.py  generate_ws_router.py  install_nginx.py  module_codegen.py  server_manager.py  validate_modules.py  validate_package_names.py  verify_ws_routers.py  watch-api-changes.sh  watch-ws-routers.sh
backend/tests/: conftest.py  test_api_broker.py  test_api_health.py  test_api_versioning.py  test_bar_broadcaster.py  test_datafeed_broadcaster.py  test_deployment_config.py  test_export_openapi_spec.py  test_health.py  test_import_boundaries.py  test_module_registry.py  test_module_router_generator.py  test_python_client_generation.py  test_versioning.py  test_ws_bars.py  test_ws_broker.py  test_ws_datafeed.py  test_ws_integration.py
(+306 files in other folders)
