[tool.poetry]
name = "trading-api"
version = "0.1.0"
description = "A FastAPI trading API server"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    {include = "trading_api", from = "src"},
    {include = "external_packages"}
]
include = ["trading_api/py.typed", "external_packages/py.typed", "external_packages/fastws/py.typed"]


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
httpx = "^0.25.2"
requests = "^2.31.0"
openapi-python-client = "^0.16.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.5.0"
debugpy = "^1.8.0"
asyncapi = "^0.14.1"
autoflake = "^2.3.1"
jinja2 = "^3.1.2"
pyright = "^1.1.407"
types-pyyaml = "^6.0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true
ignore-init-module-imports = true
recursive = true
in-place = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

# FastAPI specific mypy plugin
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
    "tests/integration",
    "src/trading_api/modules/*/tests",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
